# haste

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindEigen3.cmake
examples/: example_seeds_file.txt
include/haste/: app_file.hpp  app_gui.hpp  tracking.hpp
include/haste/app/: benchmark.hpp  command_parser.hpp  tracking.hpp
include/haste/app/gui/: gui.hpp  gui_impl.hpp
include/haste/aux/: aux.hpp
include/haste/core/: event_window.hpp  event_window_impl.hpp  hypotheses_manager.hpp  hypothesis.hpp  interpolator.hpp  interpolator_impl.hpp  patch.hpp  patch_impl.hpp
include/haste/io/: rpg_dataset.hpp  rpg_dataset_impl.hpp
include/haste/tracking/: correlation_tracker.hpp  correlation_tracker_impl.hpp  haste_correlation_star_tracker.hpp  haste_correlation_star_tracker_impl.hpp  haste_correlation_tracker.hpp  haste_correlation_tracker_impl.hpp  haste_difference_star_tracker.hpp  haste_difference_star_tracker_impl.hpp  haste_difference_tracker.hpp  haste_difference_tracker_impl.hpp  hypothesis_tracker.hpp  hypothesis_tracker_impl.hpp
include/haste/types/: camera.hpp  camera_impl.hpp  event.hpp  event_type.hpp  types.hpp
src/: tracking_app_file.cpp  tracking_app_gui.cpp
